# cpuburner

./: CMakeLists.txt
data/: burn.data.xml
plugins/: CPUBurner.cpp  CPUBurner.hpp
schema/cpuburner/: cpuburner.schema.xml
